--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>시간표</title>
   </head>
   <frameset rows="100%,*" border="0">
     <frame src="http://112.186.146.81:4082/st"></frameset>
