--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
   <head>
     <title>시간표</title>
   </head>
+  <body>
   <frameset rows="100%,*" border="0">
-    <frame src="http://112.186.146.81:4082/st"></frameset>
+    <frame src="http://112.186.146.81:4082/st">
   </frameset>
+    
+  </body>
+
 </html>
