--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
     <title>시간표</title>
   </head>
   <body>
-  <frameset rows="100%,*" border="0">
-    <frame src="http://112.186.146.81:4082/st">
-  </frameset>
-   
+    <h1>시간표</h1>
   </body>
 
 </html>
