--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <html>
-  <head>
-    <title>시간표</title>
-  </head>
-  <body>
-    <h1>시간표</h1>
-  </body>
+  <head>...</head>
+  <frameset rows="100%,*" border="0" class="">
+					  <frame src="http://112.186.146.81:4082/st"></frameset>
 
 </html>
